--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -548,78 +548,6 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-function getTurnForDate(task, selectedStr) {
-    const formatDate = (d) => d.toISOString().split("T")[0];
-    const selectedDate = new Date(selectedStr);
-    const today = new Date();
-    const todayStr = formatDate(today);
-    const taskStart = new Date(task.date?.split(" to ")[0]);
-    const completions = task.completions || {};
-    const userOrder = [...task.users];
-    const turnByDate = task.turnByDate || {};
-    task.turnByDate = turnByDate;
-
-    let currentTurnIndex = userOrder.indexOf(task.turn || userOrder[0]);
-    if (currentTurnIndex === -1) currentTurnIndex = 0;
-
-    const d = new Date(taskStart);
-    let lastRealDate = null;
-
-    while (d <= selectedDate) {
-        const dStr = formatDate(d);
-        const isPastOrToday = d <= today;
-        const isActiveDay = dStr === selectedStr;
-
-        if (turnByDate[dStr]) {
-            currentTurnIndex = userOrder.indexOf(turnByDate[dStr]);
-        } else {
-            const completionsToday = Array.isArray(completions[dStr]) ? completions[dStr] : [];
-
-            for (const user of completionsToday) {
-                if (userOrder.includes(user)) {
-                    currentTurnIndex = (currentTurnIndex + 1) % userOrder.length;
-                }
-            }
-
-            if (isPastOrToday) {
-                turnByDate[dStr] = userOrder[currentTurnIndex];
-                lastRealDate = dStr;
-            }
-        }
-
-        d.setDate(d.getDate() + 1);
-    }
-
-    return userOrder[currentTurnIndex];
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -655,6 +583,7 @@ async function loadTasksForDate(selectedDate) {
     }
 
     visibleTasks.forEach((task) => {
+        console.log('Raw task:', JSON.stringify(task, null, 2)); // Debug log
         const taskDiv = document.createElement("div");
         taskDiv.className = "task-item";
         taskDiv.dataset.taskTitle = task.title;
@@ -666,14 +595,61 @@ async function loadTasksForDate(selectedDate) {
         if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
         const userOrder = [...task.users];
-        const currentTurn = getTurnForDate(task, selectedDate);
-        const currentIndex = userOrder.indexOf(currentTurn);
-const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+        const dateRange = task.date.split(" to ");
+        const startDate = parseLocalDate(dateRange[0]);
+        const currentDate = parseLocalDate(selectedDate);
 
+        const yesterday = new Date(currentDate);
+        yesterday.setDate(yesterday.getDate() - 1);
+        const yesterdayStr = yesterday.toISOString().split("T")[0];
+        const nowStr = new Date().toISOString().split("T")[0];
+        const isPastDate = selectedDate < nowStr;
+        const isFutureDate = selectedDate > nowStr;
+
+        // Calculate current turn
+        let currentTurn = task.turn || userOrder[0]; // Use stored turn or default to first user
+        let yesterdayCompletedCount = 0;
+
+        if (!isFutureDate) {
+            // For past or today, check actual completions
+            const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+            yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
+            if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
+                // If yesterday's turn wasn't completed, keep the same user (for today)
+                currentTurn = currentTurn;
+            } else if (!isPastDate) {
+                // Advance turn for today if yesterday was completed
+                const currentIndex = userOrder.indexOf(currentTurn);
+                const nextIndex = (currentIndex + 1) % userOrder.length;
+                currentTurn = userOrder[nextIndex];
+            } else {
+                // For past dates, use completions on that day
+                const thatDayCompletions = task.completions?.[selectedDate] || [];
+                const counts = {};
+                thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+                for (let i = 0; i < userOrder.length; i++) {
+                    if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                        currentTurn = userOrder[i];
+                        break;
+                    }
+                }
+                if (!currentTurn) currentTurn = userOrder[0];
+            }
+        } else {
+            // For future dates, assume all prior days (up to today) are completed
+            const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
+            const defaultIndex = diffDays % userOrder.length;
+            currentTurn = userOrder[defaultIndex];
+        }
+
+        console.log(`Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}, IsFuture: ${isFutureDate}`);
 
         const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
         const completedCount = completedUsers.length;
         const isCompleted = completedCount >= repeatLimit;
+
+        const nextIndex = (userOrder.indexOf(currentTurn) + 1) % userOrder.length;
+        const nextUser = userOrder[nextIndex];
 
         taskDiv.innerHTML = `
             <strong>${task.title}</strong><br>
@@ -693,6 +669,23 @@ const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
             }
         });
 
+        // Swipe-to-delete logic
+        let touchStartX = 0;
+        let touchEndX = 0;
+
+        taskDiv.addEventListener("touchstart", (e) => {
+            touchStartX = e.changedTouches[0].screenX;
+        });
+
+        taskDiv.addEventListener("touchend", (e) => {
+            touchEndX = e.changedTouches[0].screenX;
+            if (touchStartX - touchEndX > 50) {
+                taskDiv.classList.add("swiped-left");
+            } else if (touchEndX - touchStartX > 50) {
+                taskDiv.classList.remove("swiped-left");
+            }
+        });
+
         taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
             if (confirm("Are you sure you want to delete this task?")) {
                 await deleteTaskFromBackend(task.title, task.date);
@@ -704,16 +697,18 @@ const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
     });
 }
 
-
-
-
-
-
-
 async function showTaskDetails(task) {
     const selectedDate = document.querySelector(".day.selected")?.dataset.date;
     if (!selectedDate) return;
 
+    function parseLocalDate(dateStr) {
+        const [year, month, day] = dateStr.split("-").map(Number);
+        return new Date(year, month - 1, day);
+    }
+
+    const dateRange = task.date.split(" to ");
+    const startDate = parseLocalDate(dateRange[0]);
+    const currentDate = parseLocalDate(selectedDate);
     const userOrder = [...task.users];
 
     let repeatLimit = 1;
@@ -721,13 +716,56 @@ async function showTaskDetails(task) {
     if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
     if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    const currentTurn = getTurnForDate(task, selectedDate);
-    const currentIndex = userOrder.indexOf(currentTurn);
-const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+    const yesterday = new Date(currentDate);
+    yesterday.setDate(yesterday.getDate() - 1);
+    const yesterdayStr = yesterday.toISOString().split("T")[0];
+    const nowStr = new Date().toISOString().split("T")[0];
+    const isPastDate = selectedDate < nowStr;
+    const isFutureDate = selectedDate > nowStr;
 
+    // Calculate current turn
+    let currentTurn = task.turn || userOrder[0]; // Use stored turn or default
+    let yesterdayCompletedCount = 0;
+
+    if (!isFutureDate) {
+        // For past or today, check actual completions
+        const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
+        yesterdayCompletedCount = yesterdayCompletions.filter(u => u === currentTurn).length;
+        if (!isPastDate && yesterdayCompletedCount < repeatLimit) {
+            // If yesterday's turn wasn't completed, keep the same user (for today)
+            currentTurn = currentTurn;
+        } else if (!isPastDate) {
+            // Advance turn for today if yesterday was completed
+            const currentIndex = userOrder.indexOf(currentTurn);
+            const nextIndex = (currentIndex + 1) % userOrder.length;
+            currentTurn = userOrder[nextIndex];
+        } else {
+            // For past dates, use completions on that day
+            const thatDayCompletions = task.completions?.[selectedDate] || [];
+            const counts = {};
+            thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
+            for (let i = 0; i < userOrder.length; i++) {
+                if ((counts[userOrder[i]] || 0) < repeatLimit) {
+                    currentTurn = userOrder[i];
+                    break;
+                }
+            }
+            if (!currentTurn) currentTurn = userOrder[0];
+        }
+    } else {
+        // For future dates, assume all prior days (up to today) are completed
+        const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
+        const defaultIndex = diffDays % userOrder.length;
+        currentTurn = userOrder[defaultIndex];
+    }
+
+    console.log(`Modal - Task: ${task.title}, Date: ${selectedDate}, CurrentTurn: ${currentTurn}, Yesterday: ${yesterdayStr}, YesterdayCompletions: ${yesterdayCompletedCount}/${repeatLimit}, IsFuture: ${isFutureDate}`);
 
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     const completedCount = completedUsers.length;
+
+    const nextIndex = (userOrder.indexOf(currentTurn) + 1) % userOrder.length;
+    const nextUser = userOrder[nextIndex];
 
     let taskDetails = "";
     if (task.title) taskDetails += `<strong>Title:</strong> ${task.title}<br>`;
@@ -804,35 +842,29 @@ async function finishTask(userName, task, button, selectedDate) {
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    // Initialize completions array
     if (!task.completions) task.completions = {};
     if (!Array.isArray(task.completions[today])) task.completions[today] = [];
 
-    const currentTurn = (task.turnByDate?.[today]) || task.turn || task.users[0];
-    const completionsToday = task.completions[today];
+    const userCompletions = task.completions[today].filter(u => u === userName).length;
+    if (userCompletions >= repeatLimit) return;
 
-    // Prevent exceeding repeat count by same user
-    const userCount = completionsToday.filter(u => u === userName).length;
-    if (userCount >= repeatLimit) return;
+    task.completions[today].push(userName);
 
-    // ✅ Add user completion
-    completionsToday.push(userName);
+    const rewardAmount = Number(task.reward) || 0;
+    const userList = task.users;
+    let currentTurn = task.turn || userList[0];
 
-    // ✅ Rotate turn immediately if currentTurn user did the action
-    if (!task.turnByDate) task.turnByDate = {};
-    if (userName === currentTurn) {
-        const currentIndex = task.users.indexOf(currentTurn);
-        const nextIndex = (currentIndex + 1) % task.users.length;
-        task.turnByDate[today] = task.users[nextIndex];
-    } else {
-        task.turnByDate[today] = currentTurn; // preserve current turn
+    // Update turn only if the task was completed enough times
+    const todayCompletions = task.completions[today].filter(u => u === currentTurn).length;
+    if (todayCompletions >= repeatLimit) {
+        const currentIndex = userList.indexOf(currentTurn);
+        const nextIndex = (currentIndex + 1) % userList.length;
+        task.turn = userList[nextIndex];
     }
 
-    // Save to backend
+    task.date = task.date; // Preserve original date range
     await saveTaskToBackend(task);
 
-    // Reward logic
-    const rewardAmount = Number(task.reward) || 0;
     const adminEmail = localStorage.getItem("currentAdminEmail");
     if (adminEmail && rewardAmount > 0) {
         await fetch("https://beemazing.onrender.com/api/rewards", {
@@ -843,10 +875,13 @@ async function finishTask(userName, task, button, selectedDate) {
     }
 
     if (typeof triggerHoneyRain === 'function') triggerHoneyRain(rewardAmount);
-    if (typeof loadTasksForDate === 'function') loadTasksForDate(today);
-    if (typeof loadUserTasks === 'function') loadUserTasks(userName, today);
+    if (typeof loadTasksForDate === 'function') loadTasksForDate(selectedDate);
+    if (typeof loadUserTasks === 'function') loadUserTasks(userName, selectedDate);
     if (typeof loadUserReward === 'function') loadUserReward(userName);
 }
+
+
+
 
 
 
