--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -546,185 +546,157 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
+// Load tasks for the selected date, mirroring users.html logic
+async function loadTasksForDate(selectedDate = new Date().toLocaleDateString("sv-SE")) {
+    const taskListDiv = document.getElementById("taskList"); // Adjust ID to match your tasks.html
+    taskListDiv.innerHTML = "<p>Loading tasks...</p>";
 
-
-
-async function loadTasksForDate(selectedDate) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
-    if (!adminEmail) return;
+    let tasks = [];
 
-    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
-    const result = await response.json();
-    const tasks = result.tasks || [];
-
-    const taskList = document.getElementById("taskList");
-    taskList.innerHTML = "";
+    try {
+        const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await res.json();
+        if (!res.ok) throw new Error(data.error || "Failed to fetch tasks");
+        tasks = data.tasks || [];
+    } catch (err) {
+        console.error("Failed to fetch tasks:", err);
+        taskListDiv.innerHTML = "<p>Failed to load tasks. Please try again later.</p>";
+        return;
+    }
 
     function parseLocalDate(dateStr) {
         const [year, month, day] = dateStr.split("-").map(Number);
         return new Date(year, month - 1, day);
     }
 
-    const visibleTasks = tasks.filter(task => {
-        if (!task.date) return false;
-        const range = task.date.split(" to ");
-        const from = parseLocalDate(range[0]);
-        const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
-        const selected = parseLocalDate(selectedDate);
-        return selected >= from && selected <= to;
-    });
-
-    if (visibleTasks.length === 0) {
-        taskList.innerHTML = "<p>No tasks for this day.</p>";
-        return;
-    }
-
-    visibleTasks.forEach((task, index) => {
-        const taskDiv = document.createElement("div");
-        taskDiv.className = "task-item";
-        taskDiv.dataset.taskTitle = task.title;
-        taskDiv.dataset.taskDate = task.date;
-
-        // ✅ Define repeatLimit FIRST
-        let repeatLimit = 1;
-        if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
-        if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
-        if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
-
-        let currentTurn;
+    // Filter tasks for the selected date
+    const filteredTasks = tasks.filter(task => {
         const dateRange = task.date.split(" to ");
-        const startDate = parseLocalDate(dateRange[0]);
+        const startDateStr = dateRange[0];
+        const startDate = parseLocalDate(startDateStr);
+        const endDateStr = dateRange[1] || "3000-01-01";
+        const endDate = parseLocalDate(endDateStr);
         const currentDate = parseLocalDate(selectedDate);
-        const userOrder = [...task.users];
-
-        const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-        const defaultIndex = diffDays % userOrder.length;
-        const assumedTurn = userOrder[defaultIndex];
-
-        const yesterday = new Date(currentDate);
-        yesterday.setDate(yesterday.getDate() - 1);
-        const yesterdayStr = yesterday.toISOString().split("T")[0];
-        const yesterdayCompletions = task.completions?.[yesterdayStr] || [];
-
-        const yesterdayTurnIndex = (diffDays - 1) % userOrder.length;
-        const yesterdayTurn = userOrder[yesterdayTurnIndex];
-        const yesterdayCompletedCount = yesterdayCompletions.filter(u => u === yesterdayTurn).length;
-
-        const now = new Date().toISOString().split("T")[0];
-        const isPastDate = selectedDate < now;
-
-        if (isPastDate) {
-            const thatDayCompletions = task.completions?.[selectedDate] || [];
-            const counts = {};
-            thatDayCompletions.forEach(u => counts[u] = (counts[u] || 0) + 1);
-
-            for (let i = 0; i < userOrder.length; i++) {
-                if ((counts[userOrder[i]] || 0) < repeatLimit) {
-                    currentTurn = userOrder[i];
-                    break;
-                }
-            }
-
-            if (!currentTurn) currentTurn = userOrder[0]; // fallback
-        } else {
-            if (yesterdayCompletedCount < repeatLimit) {
-                currentTurn = yesterdayTurn;
-            } else {
-                currentTurn = assumedTurn;
-            }
-        }
-
-        // ✅ Completions & display
-        const today = selectedDate;
-        const completedUsers = Array.isArray(task.completions?.[today]) ? task.completions[today] : [];
-        const completedCount = completedUsers.length;
-        const isCompleted = completedCount >= repeatLimit;
-
-        taskDiv.innerHTML = `
-            <strong>${task.title}</strong><br>
-            Turn: ${currentTurn}<br>
-            Completed: ${completedCount}/${repeatLimit}<br>
-            ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
-            <button class="delete-btn">Delete</button>
-        `;
-
-        // Task interaction logic
-        taskDiv.addEventListener("click", (e) => {
-            if (!taskDiv.classList.contains("swiped-left") && e.target !== taskDiv.querySelector(".delete-btn")) {
-                showTaskDetails(task);
-            }
-        });
-
-        let startX = 0;
-        let currentX = 0;
-        let isSwiping = false;
-
-        taskDiv.addEventListener("touchstart", (e) => {
-            startX = e.touches[0].clientX;
-            isSwiping = true;
-        });
-
-        taskDiv.addEventListener("touchmove", (e) => {
-            if (!isSwiping) return;
-            currentX = e.touches[0].clientX;
-            const diffX = startX - currentX;
-            if (diffX > 50) {
-                taskDiv.classList.add("swiped-left");
-            } else if (diffX < -20) {
-                taskDiv.classList.remove("swiped-left");
-            }
-        });
-
-        taskDiv.addEventListener("touchend", () => { isSwiping = false; });
-
-        taskDiv.addEventListener("mousedown", (e) => {
-            startX = e.clientX;
-            isSwiping = true;
-        });
-
-        taskDiv.addEventListener("mousemove", (e) => {
-            if (!isSwiping) return;
-            currentX = e.clientX;
-            const diffX = startX - currentX;
-            if (diffX > 50) {
-                taskDiv.classList.add("swiped-left");
-            } else if (diffX < -20) {
-                taskDiv.classList.remove("swiped-left");
-            }
-        });
-
-        taskDiv.addEventListener("mouseup", () => { isSwiping = false; });
-        taskDiv.addEventListener("mouseleave", () => { isSwiping = false; });
-
-        taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-            if (confirm(`Are you sure you want to delete "${task.title}"?`)) {
-                const loadingDiv = document.createElement("div");
-                loadingDiv.textContent = "Deleting task...";
-                loadingDiv.style.position = "fixed";
-                loadingDiv.style.top = "50%";
-                loadingDiv.style.left = "50%";
-                loadingDiv.style.transform = "translate(-50%, -50%)";
-                loadingDiv.style.background = "rgba(0, 0, 0, 0.8)";
-                loadingDiv.style.color = "white";
-                loadingDiv.style.padding = "20px";
-                loadingDiv.style.borderRadius = "10px";
-                document.body.appendChild(loadingDiv);
-
-                try {
-                    await deleteTaskFromBackend(task.title, task.date);
-                    taskDiv.remove();
-                    if (taskList.children.length === 0) {
-                        taskList.innerHTML = "<p>No tasks for this day.</p>";
-                    }
-                } finally {
-                    loadingDiv.remove();
-                }
-            }
-        });
-
-        taskList.appendChild(taskDiv);
+        return currentDate >= startDate && currentDate <= endDate;
     });
+
+    if (filteredTasks.length === 0) {
+        taskListDiv.innerHTML = "<p>No tasks for this date.</p>";
+    } else {
+        taskListDiv.innerHTML = "";
+        filteredTasks.forEach(task => {
+            const taskDiv = document.createElement("div");
+            taskDiv.className = "task-item"; // Match your CSS class
+
+            const dateRange = task.date.split(" to ");
+            const startDateStr = dateRange[0];
+            const startDate = parseLocalDate(startDateStr);
+            const currentDate = parseLocalDate(selectedDate);
+
+            let requiredTimes = 1;
+            if (task.repeat === "Daily") requiredTimes = task.timesPerDay || 1;
+            if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
+            if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
+
+            let completedRaw = task.completions?.[selectedDate] || [];
+            let completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
+            let completedTimes = completedUsers.length;
+
+            let currentTurn;
+            if (task.repeat === "Daily" && task.timesPerDay > 1) {
+                const userOrder = [...task.users];
+                const totalRequiredCompletions = task.timesPerDay;
+                const completionIndex = completedTimes % userOrder.length;
+                currentTurn = userOrder[completionIndex];
+            } else if (task.repeat === "Daily" && task.timesPerDay === 1) {
+                const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
+                const userOrder = [...task.users];
+                const currentIndex = diffDays % userOrder.length;
+                currentTurn = userOrder[currentIndex];
+            } else {
+                currentTurn = task.turn || task.users[0];
+            }
+
+            let progressText = completedTimes >= requiredTimes
+                ? `<span style="color: green; font-weight: bold;">Completed</span>`
+                : `${completedTimes}/${requiredTimes}`;
+
+            const showTurn = completedTimes < requiredTimes;
+            const turnText = showTurn ? `Turn: ${currentTurn}<br>` : '';
+
+            taskDiv.innerHTML = `
+                <strong>${task.title}</strong><br>
+                ${turnText}
+                Assigned: ${task.users.join(", ")}<br>
+                Honey: ${task.reward || "0"} 🍯<br>
+                Progress: ${progressText}
+            `;
+
+            taskDiv.addEventListener("click", () => showTaskDetails(task));
+            taskListDiv.appendChild(taskDiv);
+        });
+    }
 }
+
+// Optional: If tasks.html allows task completion, use this to mirror users.html's finishTask
+async function finishTaskInTasks(currentUser, task, selectedDate) {
+    const today = selectedDate || new Date().toISOString().split("T")[0];
+    const adminEmail = localStorage.getItem("currentAdminEmail");
+
+    const popup = document.createElement("div");
+    popup.className = "reward-popup";
+    popup.textContent = `Finished! ✅ +${task.reward || 0} 🍯`;
+    document.body.appendChild(popup);
+    setTimeout(() => popup.remove(), 2000);
+
+    try {
+        const tasksResponse = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const tasksData = await tasksResponse.json();
+        if (!tasksResponse.ok) throw new Error(tasksData.error || "Failed to fetch tasks");
+        const tasks = tasksData.tasks || [];
+        const taskIndex = tasks.findIndex(t => t.title === task.title && t.date === task.date);
+        if (taskIndex === -1) return;
+
+        if (!tasks[taskIndex].completions) tasks[taskIndex].completions = {};
+        if (!Array.isArray(tasks[taskIndex].completions[today])) tasks[taskIndex].completions[today] = [];
+
+        let requiredTimes = 1;
+        if (task.repeat === "Daily") requiredTimes = task.timesPerDay || 1;
+        if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
+        if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
+
+        const completedUsers = tasks[taskIndex].completions[today];
+        if (completedUsers.length >= requiredTimes) return;
+
+        completedUsers.push(currentUser);
+
+        // Update turn (same logic as users.html)
+        const userList = tasks[taskIndex].users;
+        const currentTurn = tasks[taskIndex].turn || userList[0];
+        const currentIndex = userList.indexOf(currentTurn);
+        const nextIndex = (currentIndex + 1) % userList.length;
+        tasks[taskIndex].turn = userList[nextIndex];
+
+        await fetch("https://beemazing.onrender.com/api/tasks", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ adminEmail, task: tasks[taskIndex] })
+        });
+
+        const rewardAmount = Number(task.reward || 0);
+        await updateUserReward(currentUser, rewardAmount);
+        await saveTaskHistory(currentUser, task);
+        triggerHoneyRain(rewardAmount);
+
+        setTimeout(() => loadUserReward(currentUser), 100);
+        await loadTasksForDate(selectedDate);
+    } catch (err) {
+        console.error("Error finishing task:", err);
+        alert("Failed to finish task. Please try again.");
+    }
+}
+
 
 
 
