--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -545,26 +545,6 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-function getTurnForDate(task, selectedDateStr) {
-    const todayStr = new Date().toISOString().split("T")[0];
-    const selectedStr = new Date(selectedDateStr).toISOString().split("T")[0];
-
-    // ✅ If explicit override exists, trust it
-    if (task.turnByDate?.[selectedStr]) {
-        return task.turnByDate[selectedStr];
-    }
-
-    if (selectedStr === todayStr) {
-        const yesterdayTurn = getTurnForYesterday(task);
-        return getTurnForPastOrToday(task, selectedStr, yesterdayTurn);
-    }
-
-    if (selectedStr > todayStr) {
-        return getTurnForFutureDate(task, selectedStr);
-    }
-
-    return getTurnForPastOrToday(task, selectedStr);
-}
 
 
 
@@ -574,109 +554,12 @@ function getTurnForDate(task, selectedDateStr) {
 
 
 
-function getTurnForPastOrToday(task, selectedStr, initialTurn = null) {
-    const formatDate = (d) => d.toISOString().split("T")[0];
-    const userOrder = [...task.users];
-    const completions = task.completions || {};
-    const turnByDate = task.turnByDate || {};
-
-    const startDate = new Date(task.date.split(" to ")[0]);
-    const selectedDate = new Date(selectedStr);
-    let currentIndex = initialTurn !== null
-        ? userOrder.indexOf(initialTurn)
-        : userOrder.indexOf(task.turn || userOrder[0]);
-    if (currentIndex === -1) currentIndex = 0;
-
-    const d = new Date(startDate);
-
-    while (d <= selectedDate) {
-        const dStr = formatDate(d);
-
-        if (turnByDate[dStr]) {
-            currentIndex = userOrder.indexOf(turnByDate[dStr]);
-        } else {
-            const completionsToday = Array.isArray(completions[dStr]) ? completions[dStr] : [];
-
-            for (const user of completionsToday) {
-                if (userOrder.includes(user)) {
-                    currentIndex = (currentIndex + 1) % userOrder.length;
-                }
-            }
-        }
-
-        d.setDate(d.getDate() + 1);
-    }
-
-    return userOrder[currentIndex];
-}
-
-
-
-
-function getTurnForYesterday(task) {
-    const formatDate = (d) => d.toISOString().split("T")[0];
-    const yesterday = new Date();
-    yesterday.setDate(yesterday.getDate() - 1);
-    const yesterdayStr = formatDate(yesterday);
-
-    return getTurnForPastOrToday(task, yesterdayStr);
-}
 
 
 
 
 
 
-function getTurnForTomorrow(task) {
-    const userOrder = [...task.users];
-    const yesterdayTurn = getTurnForYesterday(task);
-    let currentIndex = userOrder.indexOf(yesterdayTurn);
-    if (currentIndex === -1) currentIndex = 0;
-
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-
-    // Simulate perfect completions
-    for (let i = 0; i < repeatLimit; i++) {
-        currentIndex = (currentIndex + 1) % userOrder.length;
-    }
-
-    return userOrder[currentIndex];
-}
-
-
-
-
-
-
-function getTurnForFutureDate(task, futureStr) {
-    const formatDate = (d) => d.toISOString().split("T")[0];
-    const userOrder = [...task.users];
-    const completions = task.completions || {};
-    const turnByDate = task.turnByDate || {};
-
-    const today = new Date();
-    const futureDate = new Date(futureStr);
-    const startDate = new Date(today);
-
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-
-    let currentIndex = userOrder.indexOf(getTurnForYesterday(task));
-    if (currentIndex === -1) currentIndex = 0;
-
-    const d = new Date(startDate);
-    while (d <= futureDate) {
-        for (let i = 0; i < repeatLimit; i++) {
-            currentIndex = (currentIndex + 1) % userOrder.length;
-        }
-        d.setDate(d.getDate() + 1);
-    }
-
-    return userOrder[currentIndex];
-}
 
 
 
@@ -858,6 +741,99 @@ const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+function getTurnForDate(task, selectedDateStr) {
+    const formatDate = (d) => d.toISOString().split("T")[0];
+    const todayStr = formatDate(new Date());
+    const selectedStr = formatDate(new Date(selectedDateStr));
+    const userOrder = [...task.users];
+    const completions = task.completions || {};
+    const turnByDate = task.turnByDate || {};
+
+    // If there's an explicit turn override for this date, use it
+    if (turnByDate[selectedStr]) {
+        return turnByDate[selectedStr];
+    }
+
+    const startDate = new Date(task.date.split(" to ")[0]);
+    let currentIndex = userOrder.indexOf(task.turn || userOrder[0]);
+    if (currentIndex === -1) currentIndex = 0;
+
+    // Calculate turn up to selected date
+    const d = new Date(startDate);
+    while (d <= new Date(selectedDateStr)) {
+        const dStr = formatDate(d);
+
+        // Use explicit turn if set
+        if (turnByDate[dStr]) {
+            currentIndex = userOrder.indexOf(turnByDate[dStr]);
+        } else {
+            // Check completions for this date
+            const completedUsers = Array.isArray(completions[dStr]) ? completions[dStr] : [];
+            if (completedUsers.length > 0) {
+                // Advance turn for each completion
+                completedUsers.forEach(() => {
+                    currentIndex = (currentIndex + 1) % userOrder.length;
+                });
+            } else if (dStr < selectedStr) {
+                // For past days with no completions, assume turn persists
+                // No change in index
+            }
+        }
+
+        d.setDate(d.getDate() + 1);
+    }
+
+    // For future dates, assume perfect completions from today onward
+    if (selectedStr > todayStr) {
+        const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                           task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                           task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+        const daysDiff = Math.floor((new Date(selectedStr) - new Date(todayStr)) / (1000 * 60 * 60 * 24));
+        for (let i = 0; i < daysDiff * repeatLimit; i++) {
+            currentIndex = (currentIndex + 1) % userOrder.length;
+        }
+    }
+
+    return userOrder[currentIndex];
+}
+
+function getTurnForPastOrToday(task, selectedStr) {
+    // This function is no longer needed, as getTurnForDate handles all cases
+    return getTurnForDate(task, selectedStr);
+}
+
+function getTurnForYesterday(task) {
+    const yesterday = new Date();
+    yesterday.setDate(yesterday.getDate() - 1);
+    return getTurnForDate(task, yesterday.toISOString().split("T")[0]);
+}
+
+function getTurnForTomorrow(task) {
+    const tomorrow = new Date();
+    tomorrow.setDate(tomorrow.getDate() + 1);
+    return getTurnForDate(task, tomorrow.toISOString().split("T")[0]);
+}
+
+function getTurnForFutureDate(task, futureStr) {
+    // This function is no longer needed, as getTurnForDate handles future dates
+    return getTurnForDate(task, futureStr);
+}
+
 async function finishTask(userName, task, button, selectedDate) {
     const today = selectedDate;
 
@@ -869,25 +845,22 @@ async function finishTask(userName, task, button, selectedDate) {
     if (!task.completions) task.completions = {};
     if (!Array.isArray(task.completions[today])) task.completions[today] = [];
 
-    const currentTurn = (task.turnByDate?.[today]) || task.turn || task.users[0];
     const completionsToday = task.completions[today];
-
-    // Prevent exceeding repeat count by same user
     const userCount = completionsToday.filter(u => u === userName).length;
     if (userCount >= repeatLimit) return;
 
-    // ✅ Add user completion
+    // Add user completion
     completionsToday.push(userName);
 
-    // ✅ Rotate turn immediately if currentTurn user did the action
+    // Update turnByDate for today based on completions
     if (!task.turnByDate) task.turnByDate = {};
-    if (userName === currentTurn) {
-        const currentIndex = task.users.indexOf(currentTurn);
-        const nextIndex = (currentIndex + 1) % task.users.length;
-        task.turnByDate[today] = task.users[nextIndex];
-    } else {
-        task.turnByDate[today] = currentTurn; // preserve current turn
-    }
+    const userOrder = [...task.users];
+    let currentIndex = userOrder.indexOf(task.turnByDate[today] || task.turn || userOrder[0]);
+    if (currentIndex === -1) currentIndex = 0;
+
+    // Advance turn based on the number of completions today
+    currentIndex = (currentIndex + completionsToday.length) % userOrder.length;
+    task.turnByDate[today] = userOrder[currentIndex];
 
     // Save to backend
     await saveTaskToBackend(task);
@@ -908,20 +881,6 @@ async function finishTask(userName, task, button, selectedDate) {
     if (typeof loadUserTasks === 'function') loadUserTasks(userName, today);
     if (typeof loadUserReward === 'function') loadUserReward(userName);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
