--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1269,21 +1269,12 @@ taskDiv.appendChild(statusDiv);
 
         completedUsers.push(currentUser);
 
-        // Update turn for the specific date
+        // Update turn
         const userList = tasks[taskIndex].users;
-        if (!tasks[taskIndex].turnByDate) tasks[taskIndex].turnByDate = {};
-
-        // Calculate the current turn based on completions
-        let currentIndex = userList.indexOf(tasks[taskIndex].turn || userList[0]);
-        const advanceCount = completedUsers.length; // Number of completions after adding the current one
-        currentIndex = (currentIndex + advanceCount) % userList.length;
-        tasks[taskIndex].turnByDate[today] = userList[currentIndex];
-
-        // Update the global turn to the next user after the last completion on this date
-        if (completedUsers.length === requiredTimes) {
-            const nextIndex = (currentIndex + 1) % userList.length;
-            tasks[taskIndex].turn = userList[nextIndex];
-        }
+        const currentTurn = tasks[taskIndex].turn || userList[0];
+        const currentIndex = userList.indexOf(currentTurn);
+        const nextIndex = (currentIndex + 1) % userList.length;
+        tasks[taskIndex].turn = userList[nextIndex];
 
         await fetch("https://beemazing.onrender.com/api/tasks", {
             method: "POST",
@@ -1304,6 +1295,8 @@ taskDiv.appendChild(statusDiv);
         alert("Failed to finish task. Please try again.");
     }
 }
+
+
 
         function showTaskDetails(task) {
     const selectedDate = document.querySelector(".day.selected")?.dataset.date;
